# pybind11_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: README.md  build_helper.cmake  py3_utils.cmake  pybind11_utils.cmake  third_party.cmake  torch_utils.cmake  utils.cmake
csrc/: .gitignore  CMakeLists.txt  module_defs.cmake
csrc/src/: pybind11_interface.cc
module/: .gitignore  main.py
resources/build_helper/: py3_require_package.py
test/: CMakeLists.txt
